@@ -66,23 +66,23 @@ $def[1] = ""
 
 if (isset($RRD['in_avg'])) {
 $def[1] .= ""
-  . "DEF:inavg=$RRD[in_avg] "
-  . "DEF:outavg=$RRD[out_avg] "
-  . "CDEF:inavgmb=inavg,1048576,/ "
-  . "CDEF:outavgmb=outavg,1048576,/ "
-  . "DEF:inavgavg=$RRDAVG[in_avg] "
-  . "DEF:outavgavg=$RRDAVG[out_avg] "
-  . "CDEF:inavgmbavg=inavgavg,1048576,/ "
-  . "CDEF:outavgmbavg=outavgavg,1048576,/ "
-  . "CDEF:outavgmbdraw=outavg,-1048576,/ "
-  . "LINE:inavgmb#a0d040:\"in (avg) \" "
-  . "GPRINT:inavgmb:LAST:\"%5.3lf MB/s last\" "
-  . "GPRINT:inavgmbavg:AVERAGE:\"%5.3lf MB/s avg\" "
-  . "GPRINT:inavgmb:MAX:\"%5.3lf MB/s max\\n\" "
-  . "LINE:outavgmbdraw#40a0d0:\"out (avg)\" "
-  . "GPRINT:outavgmb:LAST:\"%5.3lf MB/s last\" "
-  . "GPRINT:outavgmbavg:AVERAGE:\"%5.3lf MB/s avg\" "
-  . "GPRINT:outavgmb:MAX:\"%5.3lf MB/s max\\n\" "
+  . "DEF:inaverage=$RRD[in_avg] "
+  . "DEF:outaverage=$RRD[out_avg] "
+  . "CDEF:inaveragemb=inaverage,1048576,/ "
+  . "CDEF:outaveragemb=outaverage,1048576,/ "
+  . "DEF:inaverage_avg=$RRDAVG[in_avg] "
+  . "DEF:outaverage_avg=$RRDAVG[out_avg] "
+  . "CDEF:inaveragemb_avg=inaverage_avg,1048576,/ "
+  . "CDEF:outaveragemb_avg=outaverage_avg,1048576,/ "
+  . "CDEF:outaveragemb_draw=outaverage,-1048576,/ "
+  . "LINE:inaveragemb_avg#a0d040:\"in (avg) \" "
+  . "GPRINT:inaveragemb:LAST:\"%5.3lf MB/s last\" "
+  . "GPRINT:inaveragemb_avg:AVERAGE:\"%5.3lf MB/s avg\" "
+  . "GPRINT:inaveragemb:MAX:\"%5.3lf MB/s max\\n\" "
+  . "LINE:outaveragemb_draw#40a0d0:\"out (avg)\" "
+  . "GPRINT:outaveragemb:LAST:\"%5.3lf MB/s last\" "
+  . "GPRINT:outaveragemb_avg:AVERAGE:\"%5.3lf MB/s avg\" "
+  . "GPRINT:outaveragemb:MAX:\"%5.3lf MB/s max\\n\" "
   ;
 }
 
